[gd_scene load_steps=2 format=2]

[ext_resource path="res://Move towards goal (constant)/Bug.gd" type="Script" id=1]

[node name="Bug" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -3, 3, -3, -3, 3, -3, 4, -2, 4, -2, 5, -1, 5, 1, 4, 2, 4, 2, 3, 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
antialiased = true
polygon = PoolVector2Array( -3, 3, -3, -3, 3, -3, 4, -2, 7, -2, 7, -1, 4, -2, 5, -1, 5, 1, 4, 2, 7, 1, 7, 2, 4, 2, 3, 3 )

[node name="DeathTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Bug_body_entered"]
[connection signal="timeout" from="DeathTime" to="." method="_on_Death_time_timeout"]
